Archive2/ca/1f3da005c03ce8/output
main.cpp:8:14: error: a non-type template parameter cannot have type 'foo'
template<foo f>
             ^
1 error generated.
