Archive2/ca/1f3da005c03ce8/main.cpp
struct foo
{
    constexpr foo()
    {
    }
};

template<foo f>
void bar()
{
}

int main()
{
}
